# LegalDocInspector

./: .dockerignore  .gitignore  BACKEND_SPEC.txt  DUPLICATES.md  Dockerfile  Dockerfile_flask_app  Dockerfile_streamlit_app  MODULES.md  PROJECT_STRUCTURE.txt  PROJECT_STRUCTURE_refactored.txt  README.md  TECHNICAL_SPECIFICATION.md  TECHNICAL_SPECIFICATION_WEB.md  build_and_push.sh  claim_data.json  docker-compose-latest.yaml  docker-compose.yaml  dockerfile  eval_pdf_parser.py  example_file_uploading.py  interface.py  interface_v_20_06.py  name_parser.py  pyproject.toml  requirements-build.txt  requirements.txt  run.py  run.sh  run_frontend.sh
.streamlit/: config.toml
LegalDocInspector/: logging_config.py
LegalDocInspectorV2/: FullSpecification.md  MonitoringGuide.md  ProjectStructure.md  QuickStart.md  TZ-supplement-02-roli-i-stsenarii.md  TZ-supplement-03-vkhodnye-dannye.md  TZ-supplement-04-funktsionalnye-trebovaniya.md  TZ-supplement-05-nefunktsionalnye-trebovaniya.md  TZ-supplement-06-arkhitektura.md  TZ-supplement-07-kontrakty-api.md  TZ-supplement-08-modeli-json.md  TZ-supplement-09-struktura-proekta.md  TZ-supplement-10-kriterii-priyomki.md  TZ-supplement-12-existing-code-usage.md  TecnicalSpecification.md
LegalDocInspectorV2/python/: README.md  pyproject.toml
LegalDocInspectorV2/python/legaldoc_v2/: __init__.py
LegalDocInspectorV2/python/legaldoc_v2/ocr/: __init__.py  docling_backend.py  engine.py
LegalDocInspectorV2/python/legaldoc_v2/parsers/: __init__.py  claim_stub.py  contract_stub.py
LegalDocInspectorV3/: .demo_package_id  README.md  (+12 more)
(+291 files in other folders)
