[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "legaldoc-v2"
version = "0.1.0"
description = "Reference OCR engine abstraction (LegalDocInspector V2)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
docling = [
  "torch",
  "docling",
  "docling-core",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["legaldoc_v2*"]
